--- a/Modules/Application/Src/Application/Views/Index/index.phtml
+++ b/Modules/Application/Src/Application/Views/Index/index.phtml
@@ -1,11 +1,35 @@
 <!-- BEGIN Timeline Embed -->
       <div id="timeline-embed"></div>
       <script type="text/javascript">
+      var urlAPI = "http://api.servotal.com/albums";
+      
         var timeline_config = {
          width: "100%",
-         height: "100%",
-         source: '/example_json.json'
+         height: "100%",         
+         source: $.getJSON( urlAPI, {
+     	    format: "json"
+    	  })
         }
       </script>
       <script type="text/javascript" src="/build/js/storyjs-embed.js"></script>
       <!-- END Timeline Embed-->
+      
+      
+      <div id="images"></div>
+      <script>
+(function() {
+  var flickerAPI = "http://api.servotal.com/albums";
+  $.getJSON( flickerAPI)
+    .done(function( data ) {
+      $.each( data.items, function( i, item ) {
+        $( "<img>" ).attr( "src", item.media.m ).appendTo( "#images" );
+        if ( i === 3 ) {
+          return false;
+        }
+      });
+    });
+})();
+</script>
+      
+      
+      
