--- a/modules/Application/src/Application/Layouts/timeline.phtml
+++ b/modules/Application/src/Application/Layouts/timeline.phtml
@@ -7,6 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <script type="text/javascript"
+    src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <!-- Style-->
     <style>
       html, body {
@@ -19,7 +21,6 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body>
-      <?=$view ?>
-
+      <?=$view;?>
   </body>
 </html>
